--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-# Compiled Object files
 *.slo
 *.lo
 *.o
-
-# Compiled Dynamic libraries
 *.so
 *.dylib
-
-# Compiled Static libraries
 *.lai
 *.la
 *.a
+
+.gradle
+out
+build
+build-gradle
+data
+
