--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.8.12)
 
+find_package(Boost COMPONENTS iostreams REQUIRED)
+
 project (lb-sandbox-cpp)
 
 add_subdirectory (sbox-common)
