--- a/sbox-common/CMakeLists.txt
+++ b/sbox-common/CMakeLists.txt
@@ -3,6 +3,6 @@ project(sbox-common)
 INCLUDE_DIRECTORIES(include)
 ADD_LIBRARY(
   sbox-common
-  src/lb_common.cpp
+  src/lb/common/lb_common.cpp
 )
 
