--- a/sbox-chronicle/CMakeLists.txt
+++ b/sbox-chronicle/CMakeLists.txt
@@ -4,5 +4,6 @@ INCLUDE_DIRECTORIES(include)
 ADD_LIBRARY(
   sbox-chronicle
   src/lb/chronicle/chronicle.cpp
+  src/lb/chronicle/indexed_chronicle.cpp
 )
 
