--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ project (lb-sandbox-cpp)
 
 cmake_minimum_required (VERSION 2.8 FATAL_ERROR)
 
+
 if(UNIX)
     add_definitions(-DUNIX)
 
@@ -12,7 +13,16 @@ endif()
 
 if(APPLE)
     add_definitions(-DDARWIN)
+
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fexceptions -pthread -g")
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0")
+    set(CMAKE_CXX_FLAGS_RELEASE "-Os")
 endif()
+
+set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules/)
+
+
+find_package(Poco)
 
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_MULTITHREADED ON)
