--- a/sbox-common/CMakeLists.txt
+++ b/sbox-common/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(sbox-common)
 
-INCLUDE_DIRECTORIES(include)
+INCLUDE_DIRECTORIES(src)
 ADD_LIBRARY(
   sbox-common
   src/lb/common/common.cpp
